--- a/package.json
+++ b/package.json
@@ -7,9 +7,16 @@
     "@types/node": "10.12.24",
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
+    "@types/styled-components": "^4.1.8",
     "react": "^16.8.1",
+    "react-autosuggest": "^9.4.3",
+    "react-country-flag": "^1.0.1",
     "react-dom": "^16.8.1",
+    "react-localization": "^1.0.13",
     "react-scripts": "2.1.4",
+    "react-simple-chatbot": "^0.4.5",
+    "react-styled-select": "^2.1.2",
+    "styled-components": "^4.1.3",
     "typescript": "3.3.3"
   },
   "scripts": {
