--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-simple-chatbot": "^0.4.5",
     "react-styled-select": "^2.1.2",
     "styled-components": "^4.1.3",
+    "styled-icons": "^6.12.0",
     "typescript": "3.3.3"
   },
   "scripts": {
