--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
     "@types/styled-components": "^4.1.8",
+    "autoscroll-react": "^3.2.0",
+    "epcis-js": "^0.1.0",
     "react": "^16.8.1",
+    "react-auto-scroll": "^1.1.0",
     "react-autosuggest": "^9.4.3",
     "react-country-flag": "^1.0.1",
     "react-dom": "^16.8.1",
