--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "autoscroll-react": "^3.2.0",
     "epcis-js": "^0.1.0",
     "react": "^16.8.1",
-    "react-auto-scroll": "^1.1.0",
     "react-autosuggest": "^9.4.3",
     "react-country-flag": "^1.0.1",
     "react-dom": "^16.8.1",
     "react-localization": "^1.0.13",
+    "react-rewards": "^1.0.7",
     "react-scripts": "2.1.4",
     "react-simple-chatbot": "^0.4.5",
     "react-styled-select": "^2.1.2",
-    "styled-components": "^4.1.3",
+    "styled-components": "3",
     "styled-icons": "^6.12.0",
     "typescript": "3.3.3"
   },
