--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "seatrace",
   "version": "0.1.0",
+  "homepage": "https://louisgv.ga/nemo",
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.0",
@@ -24,6 +25,8 @@
     "typescript": "3.3.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -37,5 +40,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
