--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "react-rewards": "^1.0.7",
     "react-scripts": "2.1.4",
     "react-simple-chatbot": "^0.4.5",
+    "react-spring": "^8.0.10",
     "react-styled-select": "^2.1.2",
-    "styled-components": "3",
+    "react-use-form-state": "^0.7.0",
+    "styled-components": "^3.4.10",
     "styled-icons": "^6.12.0",
-    "typescript": "3.3.3"
+    "typescript": "3.3.3",
+    "use-persisted-state": "^0.3.0"
   },
   "scripts": {
     "predeploy": "npm run build",
