--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "16.8.0",
     "@types/styled-components": "^4.1.8",
     "autoscroll-react": "^3.2.0",
+    "case": "^1.6.1",
     "epcis-js": "^0.1.0",
     "react": "^16.8.1",
     "react-autosuggest": "^9.4.3",
