--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@types/jest": "24.0.0",
+    "@types/luxon": "^1.11.1",
     "@types/node": "10.12.24",
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
@@ -12,6 +13,7 @@
     "autoscroll-react": "^3.2.0",
     "case": "^1.6.1",
     "epcis-js": "^0.1.0",
+    "luxon": "^1.11.4",
     "react": "^16.8.1",
     "react-autosuggest": "^9.4.3",
     "react-country-flag": "^1.0.1",
@@ -26,7 +28,8 @@
     "styled-components": "^3.4.10",
     "styled-icons": "^6.12.0",
     "typescript": "3.3.3",
-    "use-persisted-state": "^0.3.0"
+    "use-persisted-state": "^0.3.0",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "predeploy": "npm run build",
