FEAT | Nemo dapp (#2)
* Init eos test

* Working contract in deprecated compiler version

* Initialize test flow with EOS hellowworld contract. Ready to send test signal

* EOS communication demo

* Stashing some old way of getting balance from the chain

* Nemo demo to send data to EOS blockchain functional

* Add https URL

* All the building block for EOSIO done

* IPFS upload ok

* Saving... ready to test out hash storing

* Saving the good ol nemotx thing

* Finalized the eos sending flow

* Adding a button to send to both EPCIS and EOS

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://louisgv.ga/nemo",
   "private": true,
   "dependencies": {
+    "@types/debug": "^4.1.3",
     "@types/jest": "24.0.0",
     "@types/luxon": "^1.11.1",
     "@types/node": "10.12.24",
@@ -12,6 +13,9 @@
     "@types/styled-components": "^4.1.8",
     "autoscroll-react": "^3.2.0",
     "case": "^1.6.1",
+    "copy-to-clipboard": "^3.1.0",
+    "debug": "^4.1.1",
+    "eosjs": "^20.0.1-a2c7836.0",
     "epcis-js": "^0.1.0",
     "luxon": "^1.11.4",
     "react": "^16.8.1",
