--- a/package.json
+++ b/package.json
@@ -4,34 +4,38 @@
   "homepage": "https://louisgv.ga/nemo",
   "private": true,
   "dependencies": {
-    "@types/debug": "^4.1.3",
-    "@types/jest": "24.0.0",
-    "@types/luxon": "^1.11.1",
-    "@types/node": "10.12.24",
-    "@types/react": "16.8.2",
-    "@types/react-dom": "16.8.0",
-    "@types/styled-components": "^4.1.8",
+    "@types/debug": "^4.1.4",
+    "@types/jest": "24.0.14",
+    "@types/luxon": "^1.15.1",
+    "@types/node": "12.0.8",
+    "@types/react": "16.8.20",
+    "@types/react-dom": "16.8.4",
+    "@types/styled-components": "^4.1.16",
     "autoscroll-react": "^3.2.0",
     "case": "^1.6.1",
-    "copy-to-clipboard": "^3.1.0",
+    "copy-to-clipboard": "^3.2.0",
     "debug": "^4.1.1",
     "eosjs": "^20.0.1-a2c7836.0",
     "epcis-js": "^0.1.0",
-    "luxon": "^1.11.4",
-    "react": "^16.8.1",
+    "filereader-stream": "^2.0.0",
+    "grommet": "^2.7.1",
+    "luxon": "^1.16.0",
+    "neat-csv": "^5.0.0",
+    "react": "^16.8.6",
     "react-autosuggest": "^9.4.3",
-    "react-country-flag": "^1.0.1",
-    "react-dom": "^16.8.1",
+    "react-country-flag": "^1.0.2",
+    "react-dom": "^16.8.6",
+    "react-file-drop": "^0.2.8",
     "react-localization": "^1.0.13",
     "react-rewards": "^1.0.7",
-    "react-scripts": "2.1.4",
-    "react-simple-chatbot": "^0.4.5",
-    "react-spring": "^8.0.10",
-    "react-styled-select": "^2.1.2",
-    "react-use-form-state": "^0.7.0",
-    "styled-components": "^3.4.10",
-    "styled-icons": "^6.12.0",
-    "typescript": "3.3.3",
+    "react-scripts": "3.0.1",
+    "react-simple-chatbot": "^0.6.1",
+    "react-spring": "^8.0.23",
+    "react-styled-select": "^2.1.3",
+    "react-use-form-state": "^0.10.4",
+    "styled-components": "^4.3.1",
+    "styled-icons": "^8.1.0",
+    "typescript": "3.5.0",
     "use-persisted-state": "^0.3.0",
     "uuid": "^3.3.2"
   },
