--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nemo",
   "version": "0.2.2",
   "homepage": "https://louisgv.ga/nemo",
+  "repository": "louisgv/nemo",
   "private": true,
   "dependencies": {
     "@types/debug": "^4.1.5",
@@ -41,12 +42,13 @@
     "uuid": "^3.3.3"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "predeploy": "yarn version && craco build",
+    "deploy": "npx gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "version": "npx auto-changelog -p && git add CHANGELOG.md"
   },
   "eslintConfig": {
     "extends": "react-app"
