--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nemo",
   "version": "1.1.1",
   "homepage": "https://louisgv.ga/nemo",
-  "repository": "louisgv/nemo",
+  "repository": "https://github.com/louisgv/nemo",
   "private": true,
   "dependencies": {
     "@types/debug": "^4.1.5",
