Agg-disagg csv to xml (#6)
* Init agg-disagg converter

* Rename csv and add aggDisagg sample

* Add option to pick csv type

* v1.0.1

* v1.0.2

* Agg Disagg functional

* v1.0.3

* Reorg csv api

* Fix trigger next step bug

* v1.1.0

* Remove header of identity

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nemo",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "homepage": "https://louisgv.ga/nemo",
   "repository": "louisgv/nemo",
   "private": true,
@@ -42,7 +42,7 @@
     "uuid": "^3.3.3"
   },
   "scripts": {
-    "predeploy": "yarn version && craco build",
+    "predeploy": "yarn version && react-scripts build",
     "deploy": "npx gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
