--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nemo",
   "version": "1.3.1",
-  "homepage": "https://louisgv.ga/nemo",
+  "homepage": "https://louisgv.github.io/nemo",
   "repository": "https://github.com/louisgv/nemo",
   "private": true,
   "license": "MIT",
