--- a/package.json
+++ b/package.json
@@ -7,40 +7,40 @@
   "license": "MIT",
   "dependencies": {
     "@types/debug": "^4.1.5",
-    "@types/jest": "24.0.25",
+    "@types/jest": "25.1.4",
     "@types/luxon": "^1.21.0",
-    "@types/node": "13.1.6",
-    "@types/react": "16.9.17",
-    "@types/react-dom": "16.9.4",
-    "@types/styled-components": "^4.4.2",
+    "@types/node": "13.9.2",
+    "@types/react": "16.9.23",
+    "@types/react-dom": "16.9.5",
+    "@types/styled-components": "^5.0.1",
     "autoscroll-react": "^3.2.0",
     "case": "^1.6.2",
-    "copy-to-clipboard": "^3.2.0",
+    "copy-to-clipboard": "^3.3.1",
     "debug": "^4.1.1",
-    "eosjs": "^20.0.1-a2c7836.0",
+    "eosjs": "^20.0.3",
     "epcis-js": "^0.1.0",
     "file-saver": "^2.0.2",
     "filereader-stream": "^2.0.0",
-    "grommet": "^2.9.0",
-    "luxon": "^1.21.3",
-    "neat-csv": "^5.1.0",
-    "react": "^16.12.0",
+    "grommet": "^2.11.2",
+    "luxon": "^1.22.0",
+    "neat-csv": "^5.2.0",
+    "react": "^16.13.1",
     "react-autosuggest": "^9.4.3",
     "react-country-flag": "^2.0.1",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.13.1",
     "react-file-drop": "^0.2.8",
     "react-localization": "^1.0.15",
     "react-rewards": "^1.1.1",
-    "react-scripts": "3.3.0",
+    "react-scripts": "3.4.0",
     "react-simple-chatbot": "^0.6.1",
     "react-spring": "^8.0.27",
-    "react-styled-select": "^2.1.4",
+    "react-styled-select": "^3.0.0",
     "react-use-form-state": "^0.12.1",
-    "styled-components": "^4.4.1",
-    "styled-icons": "^9.1.0",
-    "typescript": "3.7.4",
+    "styled-components": "^5.0.1",
+    "styled-icons": "^10.2.1",
+    "typescript": "3.8.3",
     "use-persisted-state": "^0.3.0",
-    "uuid": "^3.3.3"
+    "uuid": "^7.0.2"
   },
   "scripts": {
     "predeploy": "yarn version && react-scripts build",
