--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "version": "npx auto-changelog -p && git add CHANGELOG.md"
+    "version": "npx auto-changelog -p && git add CHANGELOG.md && git push"
   },
   "eslintConfig": {
     "extends": "react-app"
