--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
+    "@gftc/trawler": "^1.2.0",
     "@types/debug": "^4.1.5",
     "@types/jest": "25.1.4",
     "@types/luxon": "^1.21.0",
